# menoupause_project

./: README.md  pyproject.toml
src/: main.py
src/core/: consts.py  preprocess_data.py  visualization.py
src/core/data/: Key_Phrases.txt  lda_topics.csv  meltwater_data_menopause_awareness_month.csv
src/core/stage_1/: main_topics.py
src/core/stage_2/: treatment_vars.py
src/core/stage_4/: sent_analysis.py  treatment_options.py
