[tool.poetry]
name = "menopause-awerness-month"
version = "0.1.0"
description = ""
authors = ["mborodada <mboroda@lytvynov-production.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
loguru = "^0.7.2"
scikit-learn = "^1.5.2"
huggingface-hub = "^0.26.2"
gensim = "^4.3.3"
nltk = "^3.9.1"
datasets = "^3.1.0"
numpy = "^1.21.0"
transformers = "^4.18.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
wordcloud = "^1.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
